# generic-agent

./: .gitignore  Cargo.toml  README.md  config.toml
src/: infra.rs  main.rs
src/core/: ports.rs  use_cases.rs
src/core/ports/: command.rs  command_repository.rs  command_scheduler.rs
src/core/use_cases/: create_command.rs  fetch_command.rs
src/infra/: sqlite_command_repository.rs  tokio_command_scheduler.rs  worker.rs
src/infra/http/: commands.rs  types.rs
