[package]
name = "generic-agent"
version = "0.1.0"
edition = "2021"
default-run = "generic-agent"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.7.3"
tokio = { version = "1", features = ["full"] }
r2d2 = "0.8"
r2d2_sqlite = "0.20" # 0.21.0 blocked on sqlx sqlite update
rusqlite = { version = "0.27", features = ["chrono", "time"] }
chrono = "0.4.24"
async-trait = "0.1"
